1.1.24 - cleaning nms utils, separating nms and reflection (so we can use it everywhere without nms shits)